<?xml version="1.0"?>
<package format="2">
  <name>project_integration</name>
  <version>0.0.0</version>
  <description>
    The project_integration package
    Exercise 3.1 - Integration course
  </description>

  <maintainer email="eloisoldeviladalmau@gmail.com">Eloi Soldevila</maintainer>

  <license>BSD</license>

  <url type="repository">
    http://github.com/EloiSoldevilaDalmau/Integration-3.1
  </url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
